--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,25 @@
     <artifactId>spring-demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>spring-demo</name>
+
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
+        <fastjson.version>1.2.76</fastjson.version>
     </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
